# Chess-Engine

./: Bishop.cpp  Bishop.hpp  CMakeLists.txt  Castle.cpp  Castle.hpp  ChessBoard.cpp  ChessBoard.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Pieces.cpp  Pieces.hpp  Queen.cpp  Queen.hpp  README.md  definitions.hpp
